2016-09-08  Per Bothner  <per@bothner.com>

	* JLineInPort.java (parse): Check if Language.parse returned null.

2016-09-07  Per Bothner  <per@bothner.com>

	* OutPort.java (formatter): Make non-public.
	(pushConsumer, popConsumer): Remove unused methods.
	(getPassThroughOutPort): Moved from AbstractFormat.

2016-08-12  Per Bothner  <per@bothner.com>

	A cleaner format/consumer model.
	* OutPort.java: Replace 'objectFormat' and 'numberFormat' fields
	by new 'formatter', initially the PrettyPrinter.
	* PrettyWriter.java: Change to extend PrintConsumer.

2016-07-18  Per Bothner  <per@bothner.com>

	* WriterManager.java (run): Call flush rather than finalize on ports.
	This is safer, since otherwise we can get races because other threads
	might still be active and try to access the port.

2016-07-17  Per Bothner  <per@bothner.com>

	REPL input causing SyntaxException was not being added to history.
	* JLineInPort.java (parse): SyntaxException is now caught by
	Language#parse, so detect end-of-file using ERROR_SEEN.

2016-07-14  Per Bothner  <per@bothner.com>

	* TermErrorStream.java (write): Don't write error markers
	if byte array is empty.

2016-07-01  Per Bothner  <per@bothner.com>

	* TtyInPort.java: Some changes in prompt handling.
	Better support for DomTerm.
	(promptTemplate1, promptTemplate2): New convenience methods.
	(expandPrompt): Handle %{...%} escapes.  Return width.
	* JLineInPort.java: Use promptTemplate1 and promptTemplate2.

2016-06-25  Per Bothner  <per@bothner.com>

	* Path.java (readAllBytes): Handle case if unknown content-length.

2016-06-22  Per Bothner  <per@bothner.com>

	* JLineInPort.java: Remove obsolete support for JLine version 2.

2016-06-17  Per Bothner  <per@bothner.com>

	* TtyInPort.java (signIntHandler): New field.

	* QueueReader.java (appendEOF): Add missing notifyAll call.

2016-06-15  Per Bothner  <per@bothner.com>

	* JLineInPort.java (parse): Update to use new ParseContext parameter.
